# tessera

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESSERA_CLAUDE_CODE_PROMPT.md  TESSERA_FAZ9_WEB_FRONTEND.md  docker-compose.yml  pyproject.toml
config/: default.yaml  production.yaml
config/schemas/: config_schema.json
docs/: TESSERA_PROJECT_SPEC.md
scripts/: migrate_from_github_archiver.py  upload_to_s3.py
scripts/collect/: README.md  config.yaml  football_bulk.py  football_ingest.py
src/tessera/: __init__.py  __main__.py
src/tessera/archiver/: catalog.py  config.py  jobs.py  models.py  storage.py
src/tessera/cli/: __init__.py  common.py  config_cmd.py  export.py  ingest.py  init_cmd.py  inspect_cmd.py  list_cmd.py  main.py  mosaic_cmd.py  plugin_cmd.py  search.py  (+2 more)
tests/: conftest.py  test_audit.py  test_catalog.py  test_config.py  test_hashing.py  test_pipeline.py  test_registry.py  test_storage.py  test_versioning.py  test_web.py
tests/fixtures/: sample.json  sample_config.yaml
tests/test_cli/: test_config_cmd.py  test_export_cmd.py  test_ingest.py  test_inspect.py  test_list.py  test_plugin_cmd.py  test_search.py  test_stats.py
tests/test_connectors/: test_github.py  test_huggingface.py  test_kaggle.py
tests/test_exporters/: test_local.py  test_report.py
tests/test_hooks/: test_lineage.py  test_notify.py
tests/test_mosaic/: test_api.py  test_cli.py  test_store.py
tests/test_transformers/: test_clean.py  test_compress.py  test_format.py
tests/test_validators/: test_integrity.py  test_quality.py  test_schema.py
(+103 files in other folders)
